// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword match snapshot after success of sendPasswordResetEmail 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Component
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
      />
      <Component
        style={
          Object {
            "backgroundColor": "#dff0d8",
            "borderColor": "#d6e9c6",
            "marginTop": 15,
            "padding": 10,
          }
        }
      >
        <FormattedText
          defaultMessage="If the account exists, a password reset email will be sent to:"
          id="password_send.link"
          style={
            Object {
              "color": "#3c763d",
            }
          }
        />
        <Component
          style={
            Array [
              Object {
                "color": "#3c763d",
              },
              Object {
                "fontWeight": "bold",
              },
            ]
          }
        >
          test@test.com
        </Component>
        <FormattedText
          defaultMessage="Please check your inbox."
          id="password_send.checkInbox"
          style={
            Array [
              Object {
                "color": "#3c763d",
              },
              Object {
                "paddingTop": 15,
              },
            ]
          }
        />
      </Component>
    </Component>
  </TouchableWithoutFeedback>
</Component>
`;

exports[`ForgotPassword should match snapshot 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Component
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
      />
      <Component>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "color": "#777",
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 15,
                "textAlign": "center",
              },
              Object {
                "paddingTop": 15,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onChangeText={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "borderColor": "gainsboro",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 16,
              "height": 45,
              "marginBottom": 5,
              "marginTop": 5,
              "paddingLeft": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderColor": "#2389D7",
              "borderRadius": 3,
              "borderWidth": 1,
              "marginTop": 10,
              "padding": 15,
            }
          }
          disabled={true}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "color": "#2389D7",
                  "fontSize": 17,
                  "textAlign": "center",
                },
              ]
            }
          />
        </Button>
      </Component>
    </Component>
  </TouchableWithoutFeedback>
</Component>
`;

exports[`ForgotPassword snapshot for error on failure of email regex 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "paddingVertical": 50,
        }
      }
    >
      <Component
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo.png",
          }
        }
      />
      <Component>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "color": "#777",
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 15,
                "textAlign": "center",
              },
              Object {
                "paddingTop": 15,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onChangeText={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "borderColor": "gainsboro",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 16,
              "height": 45,
              "marginBottom": 5,
              "marginTop": 5,
              "paddingLeft": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderColor": "#2389D7",
              "borderRadius": 3,
              "borderWidth": 1,
              "marginTop": 10,
              "padding": 15,
            }
          }
          disabled={false}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "color": "#2389D7",
                  "fontSize": 17,
                  "textAlign": "center",
                },
              ]
            }
          />
        </Button>
      </Component>
    </Component>
  </TouchableWithoutFeedback>
</Component>
`;
